# converter

Desktop/: codigo.txt  microsoft-edge-dev.desktop  org.qt-project.qtcreator.desktop
Desktop/Frequency_Changer/build-test-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  apptest_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
Desktop/Frequency_Changer/build-test-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
Desktop/Frequency_Changer/build-test-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_apptest.rsp
Desktop/Frequency_Changer/build-test-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
Desktop/Frequency_Changer/build-test-Desktop_Qt_6_4_2_GCC_64bit-Debug/.rcc/: apptest_raw_qml_0.qrc  qmake_test.qrc  qrc_apptest_raw_qml_0.cpp  qrc_qmake_test.cpp
Desktop/Frequency_Changer/build-test-Desktop_Qt_6_4_2_GCC_64bit-Debug/apptest_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Desktop/Frequency_Changer/build-test-Desktop_Qt_6_4_2_GCC_64bit-Debug/meta_types/: apptest_json_file_list.txt  apptest_json_file_list.txt.timestamp  qt6apptest_debug_metatypes.json.gen
Desktop/Frequency_Changer/build-test-Desktop_Qt_6_4_2_GCC_64bit-Debug/qmltypes/: apptest_foreign_types.txt
Desktop/Jonathan/Frequency_Changer/conversor_frequencias/: CMakeLists.txt  MONITOR.qml  booting.qml  bypass.qml  dbmanager.h  grafic.qml  includes.h  main.cpp  output.qml  pcan.cpp  standby.qml  standbytest.qml  temperature.qml  testando.qml  timer.cpp  timer.h
Desktop/Jonathan/SQL/: teste.db
Jonathan/Frequency_Changer/conversor_frequencias/: CMakeLists.txt  dbmanager.cpp  graphics.qml  includes.h  languages.qml  main.qml  metrics.qml  pcan.h  settings.qml
Jonathan/SQL/: teste.sqbpro
(+1791 files in other folders)
